src/main/webapp/ngboostrap/app/views/root/css/root.less
//@import "../../../../css/import.less";
//@import "/ngboostrap/vendor/bootstrap-3.3.1/less/variables.flatly.less";
//@import "../../../../vendor/bootstrap-3.3.1/less/variables.flatly.less";
//#main-footer,


@sidemenuOn-margin-left: @sidemenu-width ;
@sidemenuOn-margin-left-shrink: @sidemenu-width-shrink ;
@footer-height: @navbar-padding-vertical*2+@line-height-computed;
#main-wrapper {
	
	@media (min-width: @screen-xs-min) {
		padding-bottom: @footer-height;
	}
		
	.fixed-header &{
			@media (min-width: @screen-sm-min){
				padding-top: @sidemenu-top;
			}		
	}	

	&.sidemenuOn{		

		@media (min-width: @screen-sm-min){
			padding-left: @sidemenuOn-margin-left;
		}		
		@media (max-width: @screen-xs-max) {
			margin-left: -15px;			
		}
		transition: padding .5s ease;
		
		&.shrink{
			@media (min-width: @screen-sm-min){
				padding-left: @sidemenuOn-margin-left-shrink;			
			}			
			@media (max-width: @screen-xs-max) {
				margin-left: -15px;
			}
			transition: padding .5s ease;
		}
	}
	
	>div.col-md-12 {
		overflow-y: scoll;
	}
}

#main-footer{
	position: absolute;
	display: block;
	bottom: 0;
	z-index: 903;	
	width: 100%;	
	
	nav{
		background: @navbar-default-bg;
		color: @navbar-default-color;
		margin-bottom: 0;
	}
	&.sidemenuOn{
//		height: 52px;
//		padding: 15px 13px 0;
//		margin-left: @sidemenuOn-margin-left;
		transition: padding .5s ease;
		
		@media (min-width: @screen-sm-min){
			padding-left: @sidemenuOn-margin-left;			
			padding-top: -@footer-height;
		}
		@media (max-width: @screen-xs-max){
			.responsive();
			width: inherit;
		}
//		border-top: 1px solid #CECECE;
//		background: #2a2725;
//		width: 100%;
		
		&.shrink{
			transition: padding .5s ease;
			@media (min-width: @screen-sm-min){
				padding-left: @sidemenuOn-margin-left-shrink;
			}
//			padding-left: @sidemenuOn-margin-left-shrink;
		}
	}
}

html{
	position: relative;
}
html, body{
//	height: 100%;
	min-height: 100%;
	padding: 0;
	margin: 0;	
}

.outermost-wrapper{
	.container-fluid();
//	min-height: 100%;
	>div{
		>nav{
			z-index: 905;
		}
	}
}

